# glidergun

./: .gitignore  MANIFEST.in  README.md  glidergun.ipynb  pyproject.toml  requirements.txt  ruff.toml  setup.sh  test_landsat.py  test_srtm.py
.data/: dem.tif  glidergun15.asc  glidergun15.txt  n55_e008_3arc_v1.bil  n55_e008_3arc_v1.blw  n55_e008_3arc_v1.hdr  n55_e009_3arc_v1.bil  n55_e009_3arc_v1.blw  n55_e009_3arc_v1.hdr
.devcontainer/: devcontainer.json
.output/: srtm.kml
.output/0/0/: 0.kml
.output/1/0/: 0.kml  1.kml
.output/1/1/: 0.kml  1.kml
.output/2/0/: 0.kml  1.kml  2.kml  3.kml
.output/2/1/: 0.kml  1.kml  2.kml  3.kml
.output/2/2/: 0.kml  1.kml  2.kml  3.kml
.output/2/3/: 0.kml  1.kml  2.kml  3.kml
.output/3/0/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/1/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/2/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/3/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/4/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/5/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/6/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/3/7/: 0.kml  1.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml
.output/4/0/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/1/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/10/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/11/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/12/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/13/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/14/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/15/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/2/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/3/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/4/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/5/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/6/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/7/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/8/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
.output/4/9/: 0.kml  1.kml  10.kml  11.kml  12.kml  13.kml  14.kml  15.kml  2.kml  3.kml  4.kml  5.kml  6.kml  7.kml  8.kml  9.kml
glidergun/: __init__.py  _display.py  _focal.py  _functions.py  _geojson.py  _georeferencing.py  _grid.py  _interpolation.py  _ipython.py  _literals.py  _mosaic.py  _quadkey.py  _sam.py  _shapefile.py  _stac.py  _stack.py  _types.py  _utils.py  core.py  display.py  focal.py  geojson.py  gis.py  grid.py  interp.py  io.py  ipython.py  literals.py  loftr.py  mosaic.py  plot.py  quadkey.py  sam.py  scipy.py  stac.py  stack.py  types.py  utils.py  zonal.py
notebooks/: algebra.ipynb  focal.ipynb  histogram.ipynb  interpolate.ipynb  loftr.ipynb  mosaic.ipynb  projection.ipynb  stack.ipynb  stretch.ipynb  surface.ipynb
notebooks/output/: japan.png.aux.xml  vancouver.json  vancouver.tif
tests/: test_bing.py  test_cellsize.py  test_cog.py  test_constructor.py  test_extent.py  test_focal.py  test_georeferencing.py  test_gol.py  test_grid_methods.py  test_landsat.py  test_loftr.py  test_mosaic.py  test_operators.py  test_panetary.py  test_planetary.py  test_properties.py  test_sam.py  test_saving.py  test_sentinel.py  test_srtm.py  test_stack.py  test_types.py  test_utils.py  test_zonal.py  utils.py
tests/input/: glidergun.asc
