[project]
name = "glidergun"
version = "0.9.70"
description = "Map Algebra with NumPy"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "ipython>=8.38.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "opencv-python>=4.13.0.92",
    "planetary-computer>=1.0.0",
    "rasterio>=1.4.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
torch = ["kornia>=0.8.2", "sam-prompt>=0.1.0"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kornia>=0.8.2",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "sam-prompt>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/jshirota/glidergun"
"Bug Tracker" = "https://github.com/jshirota/glidergun/issues"
