[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glidergun"
version = "0.9.127"
description = "Map Algebra with NumPy"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "contourpy>=1.3.2; python_version < '3.11'",
    "contourpy>=1.3.3; python_version >= '3.11'",
    "ipython>=8.39.0; python_version < '3.11'",
    "ipython>=9.10.1; python_version >= '3.11'",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6; python_version < '3.11'",
    "numpy>=2.4.4; python_version >= '3.11'",
    "opencv-python>=4.13.0.92",
    "planetary-computer>=1.0.0",
    "rasterio>=1.4.4",
    "scikit-learn>=1.7.2; python_version < '3.11'",
    "scikit-learn>=1.8.0; python_version >= '3.11'",
    "scipy>=1.15.3; python_version < '3.11'",
    "scipy>=1.17.1; python_version >= '3.11'",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
torch = [
    "kornia>=0.8.2",
    "sam-prompt>=0.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kornia>=0.8.2",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "sam-prompt>=0.1.1",
]

[project.urls]
"Homepage" = "https://github.com/jshirota/glidergun"
"Bug Tracker" = "https://github.com/jshirota/glidergun/issues"

[tool.setuptools.packages.find]
include = ["glidergun*"]
exclude = ["notebooks*", "tests*"]
namespaces = false
