[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glidergun"
version = "0.9.156"
description = "Map Algebra with NumPy"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "contourpy>=1.3.3; python_version >= '3.14'",
    "ipython>=7.31.1; python_version == '3.10'",
    "ipython>=8.0.0; python_version == '3.11'",
    "ipython>=8.16.0; python_version == '3.12'",
    "ipython>=8.28.0; python_version == '3.13'",
    "ipython>=8.31.1; python_version >= '3.14'",
    "matplotlib>=3.5.0; python_version == '3.10'",
    "matplotlib>=3.6.2; python_version == '3.11'",
    "matplotlib>=3.8.0; python_version == '3.12'",
    "matplotlib>=3.9.4; python_version == '3.13'",
    "matplotlib>=3.10.8; python_version >= '3.14'",
    "numpy>=1.21.2; python_version == '3.10'",
    "numpy>=1.23.2; python_version == '3.11'",
    "numpy>=1.26.0; python_version == '3.12'",
    "numpy>=2.1.0; python_version == '3.13'",
    "numpy>=2.4.4; python_version >= '3.14'",
    "opencv-python>=4.5.4; python_version == '3.10'",
    "opencv-python>=4.6.0; python_version == '3.11'",
    "opencv-python>=4.8.1; python_version == '3.12'",
    "opencv-python>=4.10.0; python_version == '3.13'",
    "opencv-python>=4.13.0; python_version >= '3.14'",
    "planetary-computer>=1.0.0",
    "rasterio>=1.3.3; python_version == '3.10'",
    "rasterio>=1.3.3; python_version == '3.11'",
    "rasterio>=1.3.9; python_version == '3.12'",
    "rasterio>=1.4.0; python_version == '3.13'",
    "rasterio>=1.4.4; python_version >= '3.14'",
    "scikit-learn>=1.0.0; python_version == '3.10'",
    "scikit-learn>=1.1.0; python_version == '3.11'",
    "scikit-learn>=1.3.0; python_version == '3.12'",
    "scikit-learn>=1.5.0; python_version == '3.13'",
    "scikit-learn>=1.8.0; python_version >= '3.14'",
    "scipy>=1.7.1; python_version == '3.10'",
    "scipy>=1.9.0; python_version == '3.11'",
    "scipy>=1.11.0; python_version == '3.12'",
    "scipy>=1.14.1; python_version == '3.13'",
    "scipy>=1.17.1; python_version >= '3.14'",
    "shapely>=1.8.0; python_version == '3.10'",
    "shapely>=1.8.5; python_version == '3.11'",
    "shapely>=2.0.2; python_version == '3.12'",
    "shapely>=2.0.6; python_version == '3.13'",
    "shapely>=2.1.2; python_version >= '3.14'",
]

[project.optional-dependencies]
torch = [
    "kornia>=0.6.2; python_version == '3.10'",
    "kornia>=0.6.7; python_version == '3.11'",
    "kornia>=0.7.1; python_version == '3.12'",
    "kornia>=0.7.4; python_version == '3.13'",
    "kornia>=0.8.2; python_version >= '3.14'",
    "sam-prompt>=0.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kornia>=0.8.2",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "sam-prompt>=0.1.2",
]

[project.urls]
"Homepage" = "https://github.com/jshirota/glidergun"
"Bug Tracker" = "https://github.com/jshirota/glidergun/issues"

[tool.setuptools.packages.find]
include = ["glidergun*"]
exclude = ["notebooks*", "tests*"]
namespaces = false
